<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/activity_package_holiday_payment_orientation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/text_payment_orientation"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_package_holiday_payment_amount_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_payment_amount"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_package_holiday_payment_orientation" />

    <TextView
        android:id="@+id/activity_package_holiday_payment_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/activity_package_holiday_payment_amount_text"
        app:layout_constraintTop_toBottomOf="@+id/activity_package_holiday_payment_amount_text"
        tools:text="R$ 421,50" />

    <EditText
        android:id="@+id/activity_package_holiday_payment_credit_card_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/hint_credit_card_number"
        android:inputType="number"
        android:maxLength="12"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_package_holiday_payment_amount" />

    <EditText
        android:id="@+id/activity_package_holiday_payment_credit_card_month"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_credit_card_month"
        android:inputType="number"
        android:maxLength="2"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/activity_package_holiday_payment_credit_card_cvc"
        app:layout_constraintStart_toStartOf="@id/activity_package_holiday_payment_credit_card_number" />

    <EditText
        android:id="@+id/activity_package_holiday_payment_credit_card_year"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_credit_card_year"
        android:inputType="number"
        android:maxLength="2"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/activity_package_holiday_payment_credit_card_cvc"
        app:layout_constraintStart_toEndOf="@id/activity_package_holiday_payment_credit_card_month" />

    <EditText
        android:id="@+id/activity_package_holiday_payment_credit_card_cvc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:hint="@string/hint_credit_card_cvc"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/activity_package_holiday_payment_credit_card_number"
        app:layout_constraintTop_toBottomOf="@id/activity_package_holiday_payment_credit_card_number" />

    <EditText
        android:id="@+id/activity_package_holiday_payment_credit_card_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:digits="@string/credit_card_name_mask"
        android:hint="@string/hint_name_on_credit_card"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@id/activity_package_holiday_payment_credit_card_number"
        app:layout_constraintStart_toStartOf="@id/activity_package_holiday_payment_credit_card_number"
        app:layout_constraintTop_toBottomOf="@id/activity_package_holiday_payment_credit_card_cvc" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/activity_package_holiday_payment_button_proceed_payment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/orange_round_button"
        android:text="@string/text_effectuate_payment"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/activity_package_holiday_payment_credit_card_name"
        app:layout_constraintStart_toStartOf="@+id/activity_package_holiday_payment_credit_card_name"
        app:layout_constraintTop_toBottomOf="@+id/activity_package_holiday_payment_credit_card_name" />

</androidx.constraintlayout.widget.ConstraintLayout>